# rackfocusfixer

./: CMakeLists.txt  FocusEditorWidget.cpp  FocusEditorWidget.h  README.md  easeInOut.h  exportDialog.ui  main.cpp  ui_exportDialog.h
tests/: CMakeLists.txt  test-interpolated-frame.cpp
